# TRA220

./: .clangd  .gitignore  CMakeLists.txt  README.md  check.py  plot.py  ref_CuPy.py  ref_NumPy.py  sample.py  test.py
.cache/clangd/index/: gen_vti.hpp.2FBC36F21CA80D30.idx  grid3d.cpp.5E523AF9352C92E7.idx  grid3d.cu.09750801A56AA591.idx  grid3d.cu.BBFF6DC1E34FFBD9.idx  grid3d.cuh.2673374D172EDD89.idx  grid3d.cuh.A9A3C4B47CC5DF39.idx  grid3d.hpp.4AE42B9FF6BFD177.idx  idx3d.cuh.BEE40725B26188C1.idx  (+15 more)
2Dpoisson/: out  pl_iso.py  pyPoisson.py
3Dpoisson/: CMakeLists.txt  ogsample.py  sample.py
3Dpoisson/.cache/clangd/index/: gen_vti.cpp.3694B775B10727C0.idx  gen_vti.hpp.ADA3009395D0A04D.idx  grid3d.cpp.5E523AF9352C92E7.idx  grid3d.cu.BBFF6DC1E34FFBD9.idx  grid3d.cuh.A9A3C4B47CC5DF39.idx  grid3d.hpp.8EE30510A8A18FA3.idx  main.cpp.13B730F1E637FE67.idx  poisson_coeffs.cu.EB0F9F609DA7536F.idx  poisson_coeffs.hpp.797CFACEDDC5ABE8.idx  poisson_init.cu.2D7455B6494C41EE.idx  poisson_solver.cu.37FBF1C22539CC62.idx  poisson_solver.hpp.5B0E8EEACB07271C.idx  poisson_system.cu.6C84402945DE75B6.idx
3Dpoisson/include/: gen_vti.hpp  grid3d.cuh  grid3d.hpp  idx3d.cuh  poisson_coeffs.hpp  poisson_init.cuh  poisson_solver.cuh  poisson_solver.hpp  poisson_system.cuh  stencils.cuh  types.hpp
3Dpoisson/output/: phi.vti
3Dpoisson/src/: gen_vti.cpp  grid3d.cpp  grid3d.cu  main.cpp  poisson_coeffs.cpp  poisson_init.cu  poisson_solver.cu  poisson_system.cu
include/: gen_vti.hpp  grid3d.cuh  grid3d.hpp  idx3d.cuh  poisson_init.cuh  poisson_solver.cuh  poisson_system.cuh
output/: phi.vti
poisson/: README  generate-channel-grid.py  u2d_saved.npy
src/: gen_vti.cpp  grid3d.cu  main.cu  poisson_init.cu  poisson_solver.cu  poisson_system.cu
